--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
     "ethereumjs-wallet": "^0.6.0",
     "express": "^4.15.3"
   }
