--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
+    "ethereumjs-tx": "^1.3.3",
     "ethereumjs-wallet": "^0.6.0",
     "express": "^4.15.3"
   }
