--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.3",
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-wallet": "^0.6.0",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "firebase": "^4.1.3"
   }
 }
