--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-wallet": "^0.6.0",
     "express": "^4.15.3",
-    "firebase": "^4.1.3"
+    "firebase": "^4.1.3",
+    "web3": "^0.19.1"
   }
 }
